src/styles/_home.scss
.home {
  padding: 2rem 5%;
  display: flex;
  flex-direction: column;
  height: calc(100vh - 4rem);
  width: 100%;

  > section {
    width: 100%;
    height: 18.75rem;
    margin: auto;
    background: url("../assets/images/image.png") no-repeat center / cover;
  }

  > h1 {
    @include heading(1px);
    margin-top: 3rem;
    @include flex(row, space-between, center);
  }

  .findMore {
    font-size: 1rem;
  }

  > main {
    width: 100%;
    flex: 1;
    display: flex;
    gap: 1rem;
    overflow-x: auto;

    &::-webkit-scrollbar {
      display: none;
    }
  }
}

.productCard {
  width: 18.75rem;
  height: 25rem;
  padding: 1rem;
  flex: none;
  @include flex(column, flex-start, center, 4px);
  position: relative;
  background-color: white;

  &:hover > div {
    opacity: 1;
  }

  img {
    @include square(14.75rem);
    object-fit: scale-down;
    margin: 1rem;
  }

  span {
    font-weight: 700;
    font-size: 1.1rem;
  }

  > div {
    opacity: 0;
    position: absolute;
    @include square(100%);
    top: 0;
    left: 0;
    background-color: #0000006b;
    @include flex;
    button,
    a {
      @include flex;
      @include square(3rem);
      border-radius: 100%;
      border: none;
      background-color: $color3;
      cursor: pointer;
      color: $color1;
      font-size: 1.1rem;
      transition: all 0.3s;
      &:hover {
        rotate: 60deg;
      }
    }
  }
}

